# mrl

./: .gitignore  README.md  README.txt  app.hi  ecosystem_test.mrl  engine.py  file_version_info.txt  game.hi  import_test.mrl  interpreter_hi.py  main.py  math.mrl  mrl.py  mrl.spec  mrl_association.reg  mrl_installer.iss  mrl_runtime.py  mrl_runtime.spec  netlify.toml  pyproject.toml  showcase_update.mrl  test.mrl  ui_test.mrl  web.hi
MRL_ECOSYSTEM/: mrl.spec
MRL_INSTALLER/: mrl_installer.iss
build_assets/: mrl_version_info.txt
mrl/: ai_engine.py  ast_nodes.py  compiler.py  config.py  environment.py  errors.py  gui_runtime.py  interpreter.py  jit_engine.py  lexer.py  main.py  module_loader.py  package_manager.py  parser.py  runtime.py  version.py  vm.py  web_runtime.py
mrl-vscode-extension/: README.md  extension.js  language-configuration.json  package.json
mrl-vscode-extension/icons/: mrl-icon-theme.json
mrl-vscode-extension/snippets/: mrl.json
mrl-vscode-extension/syntaxes/: mrl.tmLanguage.json
mrl/vscode_extension/: extension.js  language-configuration.json  package.json
mrl_lang/: __init__.py  __main__.py
mrl_web/: engine.py
mrl_web/static/: app.js  style.css
pages/: about.hi  contact.hi  home.hi
scripts/: build_release.ps1  fix_git_setup.ps1  generate_mrl_icon.py
website/: README.md  _headers  _redirects  about.html  docs.html  download.html  features.html  index.html  thank-you.html
website/css/: site.css
website/downloads/: SHA256SUMS.txt  release-manifest.json
website/js/: site.js
(+1 files in other folders)
